# HelloCMake

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
calc/: CMakeLists.txt  add.cpp  calc.h  div.cpp  mul.cpp  sub.cpp
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  testcalc.cpp
